--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width" />
   <title>Uma.Challenge</title>
   <style>
-    /* @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500&display=swap&subset=cyrillic'); */
     @media screen {
       @font-face{
       font-family:'ProximaNova';
@@ -16,10 +15,10 @@
       src:local('ProximaNova'), local('ProximaNova'),
       url('http://challenge.uma.tech/fonts/ProximaNova/Regular/ProximaNova-Regular.woff') format('woff'),
       src: url("fonts/ProximaNova/Bold/ProximaNova-Bold.eot"),
-	src: url("fonts/ProximaNova/Bold/ProximaNova-Bold?#iefix") format("embedded-opentype"),
-		url("fonts/ProximaNova/Bold/ProximaNova-Bold.woff") format("woff2"),
-		url("fonts/ProximaNova/Bold/ProximaNova-Bold.woff") format("woff"),
-		url("fonts/ProximaNova/Bold/ProximaNova-Bold.ttf") format("truetype");
+      src: url("fonts/ProximaNova/Bold/ProximaNova-Bold?#iefix") format("embedded-opentype"),
+        url("fonts/ProximaNova/Bold/ProximaNova-Bold.woff") format("woff2"),
+        url("fonts/ProximaNova/Bold/ProximaNova-Bold.woff") format("woff"),
+        url("fonts/ProximaNova/Bold/ProximaNova-Bold.ttf") format("truetype");
     }
   }
     @media only screen {
@@ -178,7 +177,7 @@
 <body
   style="font-family:'ProximaNova', Helvetica, Arial, sans-serif;-moz-box-sizing:border-box;-ms-text-size-adjust:100%;-webkit-box-sizing:border-box;-webkit-text-size-adjust:100%;Margin:0;box-sizing:border-box;color:#000000;font-family:ProximaNova, Helvetica, Arial, sans-serif;font-size:16px;font-weight:400;line-height:1.3;margin:0;min-width:100%;padding:0;text-align:left;width:100%!important">
   <span class="preheader"
-    style="color:#ffffff;display:none!important;font-size:1px;line-height:1px;max-height:0;max-width:0;mso-hide:all!important;opacity:0;overflow:hidden;visibility:hidden">Uma.Challenge______________________________________________________________________________________________________________________________________________________________________________________</span>
+    style="color:#ffffff;display:none!important;font-size:1px;line-height:1px;max-height:0;max-width:0;mso-hide:all!important;opacity:0;overflow:hidden;visibility:hidden">Uma.Challenge</span>
   <table class="body" 
     style="Margin:0;background:#ffffff;background-color:#ffffff;border-collapse:collapse;border-spacing:0;color:#000000;font-family:ProximaNova, Helvetica, Arial, sans-serif;font-size:16px;font-weight:400;height:100%;line-height:1.3;margin:0;padding:0;text-align:left;vertical-align:top;width:100%">
     <tr style="padding:0;text-align:left;vertical-align:top">
@@ -228,7 +227,7 @@
                                   border-bottom: 2px solid #0762C8;
                                   width: 100px;">01</div>
                                   <div style="padding-top:5px;">
-                                  <b>Оставь</b> предварительную заявку уже сегодня на сайте challenge.uma.tech</div>
+                                  <b>Оставь</b> предварительную заявку уже сегодня на сайте <a href="https://challenge.uma.tech" target="_blank"style="color:#000000; text-decoration: none">challenge.uma.tech</a></div>
                                 </td>
                                 <td style=" padding-bottom:0;vertical-align: top; width: 28%;
                                 padding: 0 0 0 3%">
@@ -239,7 +238,7 @@
                                   border-bottom: 2px solid #0762C8;
                                   width: 100px;">02</div>
                                   <div style="padding-top:5px;">
-                                  <b>Осенью</b> мы сообщим тебе о запуске Uma.Challenge
+                                  <b>Осенью</b> мы сообщим тебе о запуске <a href="https://challenge.uma.tech" target="_blank"style="color:#000000; text-decoration: none">Uma.Challenge</a>
                                   </div>
                                     </td>
                               </tr>
@@ -298,6 +297,7 @@
                                   color: #ffffff;
                                   text-transform: uppercase;
                                   font-weight: 600;
+                                  width:250px;
                                   font-size: 16px;display: block;" href="https://challenge.uma.tech" target="_blank">Оставить заявку</a>
                                 </td>
                               </tr>
@@ -331,13 +331,9 @@
                       <div style="color:#0762C8; font-size: 20px; padding-bottom:10px; font-weight: 600;">
                          Организатор конкурса Uma.Tech – высокотехнологическая компания с многолетним опытом работы в индустрии IT и телекоммуникаций. 
                       </div>
-
-             
-   
                       <div style="color:#000000; font-size: 17px;">
                          Мы создали одну из крупнейших российских сетей доставки видеоконтента и ряд комплексных технических решений для highload-сервисов медиа-индустрии. Благодаря им пользователи по всему миру могут получать скоростной доступ к современному цифровому контенту, что делает наших клиентов безусловными лидерами в цифровом пространстве.
                       </div>
-              
                   </td>
                 </tr>
                 <tr height="40"></tr>
