--- a/index2.html
+++ b/index2.html
@@ -64,7 +64,16 @@
           width: 100% !important;
         }
       }
-
+      @media (max-width: 768px) {
+        table.body .spacer.hidden-lg.liquid td {
+          font-size: 15px !important;
+          font-size: 2.53566vw !important;
+          line-height: 15px !important;
+          line-height: 2.53566vw !important;
+          height: 15px !important;
+          height: 2.53566vw!important;
+        }
+      }
       @media (max-width: 629px) {
         table.body .kankun_2018 {
           width: 600px !important;
@@ -155,28 +164,22 @@
       cursor:pointer;
     }
     @media (max-width: 768px) {
-        table.body .spacer.hidden-lg.liquid td {
-          font-size: 15px !important;
-          font-size: 2.53566vw !important;
-          line-height: 15px !important;
-          line-height: 2.53566vw !important;
-          height: 15px !important;
-          height: 2.53566vw !important;
-        }
         body{
-          font-size: 18px !important;
+          font-size: 18px!important;
         }
         .rules-text{
-          font-size: 22px !important;
+          font-size: 22px!important;
         }
         .number{
-          font-size: 26px !important;
+          font-size: 26px!important;
         }
         .button-send{
-          font-size: 22px !important;
+          font-size: 22px!important;
         }
       }
-  </style>
+
+      
+  </style> 
 </head>
 
 <body
@@ -351,8 +354,7 @@
                   </td>
               </tr>
             <tr>
-              <td width="20%"></td>
-              <td width="80%" style="color:#818181; padding-top: 20px;
+              <td width="80%" style="padding-left: 7%; color:#818181; padding-top: 20px;
                 padding-bottom:30px; font-size:20px">
               В случае возникновения вопросов,<br> пишите нам на <a style="color:#818181; text-decoration:none" href="mailto:talents@uma.tech">talents@uma.tech</a>
             </td>
